@@ -1,0 +1,19 @@
+DECL|class|KeepSizeExampleDlg
+DECL|function|KeepSizeExampleDlg
+DECL|function|main
+DECL|function|showOrHide
+DECL|member|checkBox
+DECL|member|checkBox2
+DECL|member|checkBox3
+DECL|member|checkBox4
+DECL|member|gridLayout
+DECL|member|groupBox
+DECL|member|horizontalLayout
+DECL|member|horizontalSpacer
+DECL|member|pushButton
+DECL|member|radioButton
+DECL|member|radioButton2
+DECL|member|radioButton3
+DECL|member|tableView
+DECL|member|verticalLayout
+DECL|member|verticalLayout2
